--- a/clientes/templates/clientes/clientes.html
+++ b/clientes/templates/clientes/clientes.html
@@ -6,9 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/clientes.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/tarjeta.css">
+   
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/clientes.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/scrollbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/tarjeta.css' %}">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     
     <title>Reservas</title>
@@ -436,6 +438,6 @@
      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
      <!--Boxicons-->
      <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-     <script src="assets/js/clientes.js"></script>
+     <script src="{% static 'assets/js/clientes.js' %}"></script>
 </body>
 </html>
