--- a/gestion/templates/gestion/principal.html
+++ b/gestion/templates/gestion/principal.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/principal.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/scrollbar.css' %}">
+    <link rel="stylesheet" type="text/css" href={% static 'assets/css/principal.css' %}>
+    <link rel="stylesheet" type="text/css" href={% static 'assets/css/scrollbar.css' %}>
 
 
     <title>Principal</title>
@@ -69,7 +69,7 @@
             </a>
         </div>
         <div class="service-box" style="--i:#FD6495">
-            <a href="clientes.html">
+            <a href="{% url 'clientes' %}">
                 <div class="icon">
                     <ion-icon name="people-circle-outline"></ion-icon>
                     <span>CLIENTES</span>
