--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href={% static 'assets/css/sidemenu.css' %}>
     <link rel="stylesheet" type="text/css" href={% static 'Fonts/fuentes.css' %}>
-    <link rel="stylesheet" type="text/css" href={% static 'assets/css/topmenu.css' %} "">
+    <link rel="stylesheet" type="text/css" href={% static 'assets/css/topmenu.css' %}>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="shortcut icon" href={% static 'Imgs/SVG/SS-LOGO.svg' %}/>
     <title>POLARISS</title>
@@ -188,6 +188,7 @@
     oldEmbed.parentNode.replaceChild(newEmbed, oldEmbed);
     //location.reload();
     //alert(document.getElementById('embed1').src);}
+  }
     </script>
   </body>
 </html>
