--- a/clientes/templates/clientes/clientes.html
+++ b/clientes/templates/clientes/clientes.html
@@ -175,7 +175,7 @@
         <!-- Lista de reservaciones -->
         <div class="recientes">
             <div class="titulo">
-                <h2>Clientes Frecuentes </h2>
+                <h2>Lista de clientes </h2>
                 <a href="#" class="btn">Ver todos</a>
             </div>
             <table>
